# taskit

./: CMakeLists.txt  LICENSE  taskit.gresource.xml
assets/: window.ui
src/: app.c  app.h  main.c  win.c  win.h
